--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -70,7 +70,7 @@ footer {
     bottom: 0;
     right: 1em;
     width: 100%;
-    text-align: right;
+    text-align: center;
     padding: 0.2rem;
 }
 
