--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -67,9 +67,9 @@ body::before {
 
 footer {
     position: absolute;
+    right: 0;
+    width: 100%;  
     bottom: 0;
-    right: 1em;
-    width: 100%;
     text-align: center;
     padding: 0.2rem;
 }
