--- a/api/public/style.css
+++ b/api/public/style.css
@@ -90,7 +90,7 @@ footer {
     position: fixed;
     width: 100%;  
     bottom: 0;
-    text-align: center;
+    text-align: right;
     padding: 0.2rem;
 }
 
